[package]
name = "robust"
version = "0.1.4"
edition = "2024"

[dependencies]
steady_state     = {version = "0.2.1", features = ["exec_async_std", "telemetry_server_builtin"]}

# To failfast use this
# steady_state     = {version = "0.2.1", features = ["exec_async_std", "telemetry_server_builtin", "disable_actor_restart_on_failure"]}

clap             = { version = "4.5.36", features = ["derive"] }


